--- a/app/templates/rf_tree.html
+++ b/app/templates/rf_tree.html
@@ -1,5 +1,5 @@
 {% extends "appbuilder/base.html" %}
 {% block content %}
     <h2> A decision tree for tier 1 churn </h2>
-    <p><img src="static/img/tier1_tree.png"></p>
+    <p><img src={{ data }}></p>
 {% endblock %}
