--- a/app/templates/analytics_index.html
+++ b/app/templates/analytics_index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class = "aion-analytics-div embed-responsive embed-responsive-4by3">
-    <iframe class="embed-responsive-item" src="{{ data }}">
+    <iframe width="1600px" class="embed-responsive-item" src="{{ data }}">
 
     </iframe>
 </div>
